<resources>
    <string name="app_name">胖圆课表</string>
    <!--toolbar-->
    <string name="cource_toolbar_name">第1周</string>
    <string name="toolbar_subtitle_week">点击切换周次</string>

    <!--toolbar_menu-->
    <string name="toolbar_msg_t1">修改当前周</string>
    <string name="toolbar_msg_t2">新建课程</string>
    <string name="toolbar_msg_t3">删除课程</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">你的名字</string>
    <string name="nav_header_subtitle">1600100101</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_cources">添加课程</string>
    <string name="nav_header_share_cources">分享课程</string>
    <string name="nav_header_mark">我的成绩</string>
    <string name="nav_header_creditscore">我的学分绩</string>
    <string name="nav_header_share_app">分享应用</string>
    <string name="nav_header_about_us">关于我们</string>
    <string name="nav_header_system_setting">系统设置</string>
    <string name="nav_header_item_div_title">应用相关</string>
    <string name="nav_header_item_div_protitle">与我相关</string>
    <string name="action_settings">Settings</string>
    <string name="nav_bottom_btn_night">夜间模式</string>
    <string name="nav_bottom_btn_quit">退出应用</string>

    <!--weekview-->
    <string name="weekview_defaultmonth">1月</string>
    <string name="weekview_monday">周一</string>
    <string name="weekview_tuesday">周二</string>
    <string name="weekview_wednesday">周三</string>
    <string name="weekview_thursday">周四</string>
    <string name="weekview_friday">周五</string>
    <string name="weekview_saturday">周六</string>
    <string name="weekview_sunday">周日</string>
    <string name="weekview_default_day">20日</string>

    <!--courceview-->
    <string name="section_number_1">1</string>
    <string name="section_number_2">2</string>
    <string name="section_number_3">3</string>
    <string name="section_number_4">4</string>
    <string name="section_number_5">5</string>
    <string name="section_number_6">6</string>

    <!--popview_week-->
    <string name="popweek_text_more">滑动显示更多周次</string>
    <string name="popweek_curweek_text">[本周]</string>
    <string name="dialog_login_tiltle">请输入验证码</string>
    <string name="dialog_login_subtitlle">验证码如图</string>
    <string name="dialog_loading_text">正在加载中</string>
    <string name="info_picker_grade_dedault">1970–2099</string>
    <string name="info_picker_term_dedault">第二学期</string>
    <string name="info_picker_week_dedault">第20周</string>
    <string name="info_student_id_tint">学号:</string>
    <string name="info_import">立即导入课程</string>
    <string name="info_top_text">从下方导入课程</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_bar_text_1">课程表</string>
    <string name="floating_bar_text_2">学习助手</string>
    <string name="floating_bar_text_3">小工具</string>
    <string name="floating_bar_text_4">更多</string>
    <string name="setCurrentWeekText">修改当前周次</string>
    <string name="text_sure_click">确定</string>
    <string name="base_toolbar_title">子标题</string>
    <string name="base_toolbar_subtitle">标题</string>
    <string name="login_page_button_str">Login</string>
    <string name="login_page_help_str"><u>登录问题解决方法</u>></string>
    <string name="login_page_about_me_str"><u>关于胖圆课表</u>></string>
    <string name="login_page_message_str">请输入教务系统账号/密码</string>

</resources>
