<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    app:cardCornerRadius="20dp"
    android:elevation="20dp"
    android:background="@color/grey_color">


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_btn_course"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:button="@null"
            android:drawableTop="@drawable/selector_floating_course"
            android:text="@string/floating_bar_text_1"
            android:textSize="@dimen/tinyTextSze"/>

        <RadioButton
            android:id="@+id/rb_btn_study_helper"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:button="@null"
            android:drawableTop="@drawable/selector_floating_study_helper"
            android:text="@string/floating_bar_text_2"
            android:textSize="@dimen/tinyTextSze"/>

        <RadioButton
            android:id="@+id/rb_btn_utils"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:button="@null"
            android:drawableTop="@drawable/selector_floating_utils"
            android:text="@string/floating_bar_text_3"
            android:textSize="@dimen/tinyTextSze"/>

        <RadioButton
            android:id="@+id/rb_btn_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:button="@null"
            android:text="@string/floating_bar_text_4"
            android:drawableTop="@drawable/selector_floating_more"
            android:textSize="@dimen/tinyTextSze"/>
    </RadioGroup>


</androidx.cardview.widget.CardView>