<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:alpha="0.9"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/weekview_month_width"
        android:layout_height="match_parent"
        android:background="@drawable/selector_view_border"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/weekview_month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="1"
            android:gravity="center"
            android:text="@string/weekview_defaultmonth"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/selector_view_border"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/monday_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_view_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_monday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/monday_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_default_day"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tuesday_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_view_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_tuesday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tuesday_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_default_day"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wednesday_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_view_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_wednesday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/wednesday_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_default_day"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thursday_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_view_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_thursday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/thursday_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_default_day"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/friday_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_view_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_friday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/friday_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_default_day"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saturday_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_view_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_saturday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/saturday_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_default_day"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sunday_contain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_view_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_sunday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sunday_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weekview_default_day"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>